--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
         data-bs-theme="dark"
       >
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="travel-logo.jpg" style="height: 40px; width: auto; border-radius: 0px 5px 0px 5px;"></a>
+          <a class="navbar-brand" href="#"
+            ><img
+              src="travel-logo.jpg"
+              style="height: 40px; width: auto; border-radius: 0px 5px 0px 5px"
+          /></a>
           <button
             class="navbar-toggler"
             type="button"
@@ -122,47 +126,48 @@
           <div class="carousel-item active">
             <img src="KR.jpg" class="d-block w-100" />
             <div class="carousel-caption d-none d-md-block">
-              <h5 style="color: white;">Kerala</h5>
-              <p style="color: white;">
+              <h5 style="color: white">Kerala</h5>
+              <p style="color: white">
                 “God’s Own Country – The Land of Beauty and Wonders!”
               </p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="Madurai.jpg" class="d-block w-100" />
+            <img src="TN.jpg" class="d-block w-100" />
             <div class="carousel-caption d-none d-md-block">
-              <h5 style="color: white;">Tamil Nadu</h5>
-              <p style="color: white;">
-                "Yes, this bliss of South India is one of a kind. Come here
-                and you will realize you are in a land of where each mile
-                reveals something of great universal value"
+              <h5 style="color: white">Tamil Nadu</h5>
+              <p style="color: white">
+                "Yes, this bliss of South India is one of a kind. Come here and
+                you will realize you are in a land of where each mile reveals
+                something of great universal value"
               </p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="PY.jpg" class="d-block w-100" />
             <div class="carousel-caption d-none d-md-block">
-              <h5 style="color: white;">Pondicherry</h5>
-              <p style="color: white;">
-                "In the tranquil embrace of Pondicherry, find solace for your soul"
+              <h5 style="color: white">Pondicherry</h5>
+              <p style="color: white">
+                "In the tranquil embrace of Pondicherry, find solace for your
+                soul"
               </p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="Goa.jpg" class="d-block w-100" />
             <div class="carousel-caption d-none d-md-block">
-              <h5 style="color: white;">Goa</h5>
-              <p style="color: white;">
-                Some representative placeholder content for the fourth slide.
+              <h5 style="color: white">Goa</h5>
+              <p style="color: white">
+                "Goa is not just a destination, it is an emotion"
               </p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="coorg.jpg" class="d-block w-100" />
             <div class="carousel-caption d-none d-md-block">
-              <h5 style="color: white;">Karnataka</h5>
-              <p style="color: white;">
-                Some representative placeholder content for the fourth slide.
+              <h5 style="color: white">Karnataka</h5>
+              <p style="color: white">
+                "One of the most beautiful destinations near Bangalore"
               </p>
             </div>
           </div>
@@ -190,44 +195,65 @@
     <div class="container text-center">
       <div class="row row-cols-2">
         <div class="col-6">
-          <div class="card" style="width: 100%;">
-            <img src="Goa_card.jpg" class="card-img-top" alt="...">
+          <div class="card" style="width: 100%; height: 98%">
+            <img src="Goa_card.jpg" class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title">Goa</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">
+                Goa is a tiny emeralds land with its natural scenic beauty,
+                attractive beaches and temples, famous for its architecture,
+                feast and festivals and hospitable people with a rich culture.
+              </p>
               <a href="#" class="btn btn-info">Package Details</a>
               <a href="#" class="btn btn-primary">Book Now</a>
             </div>
           </div>
         </div>
         <div class="col-6">
-          <div class="card" style="width: 100%;">
-            <img src="kochi.jpg" class="card-img-top" alt="Kochi">
+          <div class="card" style="width: 100%; height: 98%">
+            <img src="kochi.jpg" class="card-img-top" alt="Kochi" />
             <div class="card-body">
               <h5 class="card-title">Kochi</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">
+                A place with beautiful monuments and a variety of linguistic and
+                ethnic communities including Jews, Konkinis, Gujaratis and so
+                on.
+              </p>
               <a href="#" class="btn btn-info">Package Details</a>
               <a href="#" class="btn btn-primary">Book Now</a>
             </div>
           </div>
         </div>
         <div class="col-6">
-          <div class="card" style="width: 100%;">
-            <img src="kodaikanal.jpg" class="card-img-top" alt="kodaikanal">
+          <div class="card" style="width: 100%; height: 98%">
+            <img src="kodaikanal.jpg" class="card-img-top" alt="kodaikanal" />
             <div class="card-body">
               <h5 class="card-title">kodaikanal</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">
+                One of the very popular holiday destination hill resorts in
+                South India. This hill station stands 7200 feet above sea level
+                and situated in upper palani hills of the westernghats near
+                Madurai in Tamil Nadu. Kodaikanal is also popularly known as the
+                princes of Hill Stations.
+              </p>
               <a href="#" class="btn btn-info">Package Details</a>
               <a href="#" class="btn btn-primary">Book Now</a>
             </div>
           </div>
         </div>
         <div class="col-6">
-          <div class="card" style="width: 100%;">
-            <img src="pondy.jpg" class="card-img-top" alt="Pondicherry">
+          <div class="card" style="width: 100%; height: 98%">
+            <img src="pondy.jpg" class="card-img-top" alt="Pondicherry" />
             <div class="card-body">
               <h5 class="card-title">Pondicherry</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">
+                Puducherry is a picturesque city known for its rich French
+                colonial heritage, quaint buildings, vibrant people, delicious
+                food, stunning promenades, and picture-perfect beaches. To
+                experience some peace and quiet while you enjoy the mesmerising
+                sunset or sunrise at the beach, do visit the French Riviera of
+                the East
+              </p>
               <a href="#" class="btn btn-info">Package Details</a>
               <a href="#" class="btn btn-primary">Book Now</a>
             </div>
@@ -239,19 +265,29 @@
       <p class="text-center">Contact Us</p>
       <ul class="nav justify-content-center">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#"><img src="Twr.svg" style="height: 25px; width: 25px;"></a>
+          <a class="nav-link active" aria-current="page" href="#"
+            ><img src="Twr.svg" style="height: 25px; width: 25px"
+          /></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#"><img src="x.svg" style="height: 25px; width: 25px;"></a>
+          <a class="nav-link active" aria-current="page" href="#"
+            ><img src="x.svg" style="height: 25px; width: 25px"
+          /></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#"><img src="fb.svg" style="height: 25px; width: 25px;"></a>
+          <a class="nav-link" href="#"
+            ><img src="fb.svg" style="height: 25px; width: 25px"
+          /></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#"><img src="insta.svg" style="height: 25px; width: 25px;"></a>
+          <a class="nav-link" href="#"
+            ><img src="insta.svg" style="height: 25px; width: 25px"
+          /></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link"><img src="call.svg" style="height: 25px; width: 25px;"></a>
+          <a class="nav-link"
+            ><img src="call.svg" style="height: 25px; width: 25px"
+          /></a>
         </li>
       </ul>
     </div>
