--- a/index.html
+++ b/index.html
@@ -81,10 +81,12 @@
       </nav>
     </div>
     <div id="welcome">
-      <h1>Welcome</h1>
-      <p>
-        <b>Travel is the healthiest addiction</b>
-      </p>
+      <div id="welcome-inner">
+        <h1>Welcome</h1>
+        <p>
+          <b>Travel is the healthiest addiction</b>
+        </p>
+      </div>
     </div>
     <div class="container text-center">
       <div id="carouselExampleCaptions" class="carousel slide">
@@ -193,8 +195,8 @@
       </div>
     </div>
     <div class="container text-center">
-      <div class="row row-cols-2">
-        <div class="col-6">
+      <div class="row row-cols-auto">
+        <div class="col-sm-12 col-md-6">
           <div class="card" style="width: 100%; height: 98%">
             <img src="Goa_card.jpg" class="card-img-top" alt="..." />
             <div class="card-body">
@@ -209,7 +211,7 @@
             </div>
           </div>
         </div>
-        <div class="col-6">
+        <div class="col-sm-12 col-md-6">
           <div class="card" style="width: 100%; height: 98%">
             <img src="kochi.jpg" class="card-img-top" alt="Kochi" />
             <div class="card-body">
@@ -224,7 +226,7 @@
             </div>
           </div>
         </div>
-        <div class="col-6">
+        <div class="col-sm-12 col-md-6">
           <div class="card" style="width: 100%; height: 98%">
             <img src="kodaikanal.jpg" class="card-img-top" alt="kodaikanal" />
             <div class="card-body">
@@ -241,7 +243,7 @@
             </div>
           </div>
         </div>
-        <div class="col-6">
+        <div class="col-sm-12 col-md-6">
           <div class="card" style="width: 100%; height: 98%">
             <img src="pondy.jpg" class="card-img-top" alt="Pondicherry" />
             <div class="card-body">
