--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
     />
     <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide|Sofia|Trirong&effect=fire|neon|outline|emboss|shadow-multiple">
   </head>
   <body class="bg-dark-subtle">
     <div>
@@ -20,9 +19,8 @@
       >
         <div class="container-fluid">
           <a class="navbar-brand" href="#"
-            ><img
+            ><img id="brand-logo"
               src="travel-logo.jpg"
-              style="height: 40px; width: auto; border-radius: 0px 5px 0px 5px"
           /></a>
           <button
             class="navbar-toggler"
@@ -82,14 +80,14 @@
     </div>
     <div id="welcome">
       <div id="welcome-inner">
-        <h1>Welcome</h1>
-        <p>
+        <h1 class="Audiowide">Welcome</h1>
+        <p class="font-effect-outline">
           <b>Travel is the healthiest addiction</b>
         </p>
       </div>
     </div>
-    <div class="container text-center">
-      <div id="carouselExampleCaptions" class="carousel slide">
+    <div id="carousel" class="container text-center">
+      <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
           <button
             type="button"
@@ -197,7 +195,7 @@
     <div class="container text-center">
       <div class="row row-cols-auto">
         <div class="col-sm-12 col-md-6">
-          <div class="card" style="width: 100%; height: 98%">
+          <div class="card">
             <img src="Goa_card.jpg" class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title">Goa</h5>
@@ -212,7 +210,7 @@
           </div>
         </div>
         <div class="col-sm-12 col-md-6">
-          <div class="card" style="width: 100%; height: 98%">
+          <div class="card">
             <img src="kochi.jpg" class="card-img-top" alt="Kochi" />
             <div class="card-body">
               <h5 class="card-title">Kochi</h5>
@@ -227,7 +225,7 @@
           </div>
         </div>
         <div class="col-sm-12 col-md-6">
-          <div class="card" style="width: 100%; height: 98%">
+          <div class="card">
             <img src="kodaikanal.jpg" class="card-img-top" alt="kodaikanal" />
             <div class="card-body">
               <h5 class="card-title">kodaikanal</h5>
@@ -244,7 +242,7 @@
           </div>
         </div>
         <div class="col-sm-12 col-md-6">
-          <div class="card" style="width: 100%; height: 98%">
+          <div class="card">
             <img src="pondy.jpg" class="card-img-top" alt="Pondicherry" />
             <div class="card-body">
               <h5 class="card-title">Pondicherry</h5>
@@ -296,7 +294,5 @@
   </body>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"
   ></script>
 </html>
