--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         </button>
       </div>
     </div>
-    <div class="container text-center">
+    <div id="cards" class="container text-center">
       <div class="row row-cols-auto">
         <div class="col-sm-12 col-md-6">
           <div class="card">
