--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="index.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide|Sofia|Trirong&effect=fire|neon|outline|emboss|shadow-multiple">
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Audiowide|Sofia|Trirong&effect=fire|neon|outline|emboss|shadow-multiple"
+    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body class="bg-dark-subtle">
     <div>
@@ -19,8 +23,7 @@
       >
         <div class="container-fluid">
           <a class="navbar-brand" href="#"
-            ><img id="brand-logo"
-              src="travel-logo.jpg"
+            ><img id="brand-logo" src="travel-logo.jpg"
           /></a>
           <button
             class="navbar-toggler"
@@ -43,13 +46,14 @@
               </li>
               <li class="nav-item dropdown">
                 <a
-                  class="nav-link dropdown-toggle"
+                  class="nav-link caret-toggle"
+                  aria-haspopup="true"
                   href="#"
                   role="button"
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
                 >
-                  Places
+                  Places <i class="fa fa-caret-down" aria-hidden="true"></i>
                 </a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="#">Kerala</a></li>
@@ -87,7 +91,11 @@
       </div>
     </div>
     <div id="carousel" class="container text-center">
-      <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+      <div
+        id="carouselExampleCaptions"
+        class="carousel slide"
+        data-bs-ride="carousel"
+      >
         <div class="carousel-indicators">
           <button
             type="button"
@@ -291,8 +299,18 @@
         </li>
       </ul>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script>
+      $(document).ready(function(){
+        $('.navbar-toggler').on('click', function() {
+          $(this).find('span').toggleClass('btn-close');
+        });
+
+        $('.caret-toggle').on('click', function() {
+          $(this).find('i').toggleClass('fa-caret-up');
+        });
+      });
+  </script>
   </body>
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-  ></script>
 </html>
